refactor: refactored database to be local and not require my IP

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
-MONGO_URI=mongodb+srv://iamchristiancollins:6eM003FJsUpImcy0@cluster0.ldvmhmw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-SECRET_KEY=your_secret_key
+MONGO_URI=mongodb://localhost:27017
+SECRET_KEY=your_secret_key_here
+
+
+#MONGO_URI=mongodb+srv://iamchristiancollins:6eM003FJsUpImcy0@cluster0.ldvmhmw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#SECRET_KEY=your_secret_key
