--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/naomi_testing
+MONGO_URI=mongodb://localhost:27017/trip_planner_db
 SECRET_KEY=your_secret_key_here
 
 
