--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MONGO_URI=mongodb://localhost:27017/trip_planner_db
 SECRET_KEY=your_secret_key_here
 GOOGLEMAPS_API_KEY=AIzaSyBJmoy_vPg8vKjB-cj1Oy8ix2HfOgLWeTQ
+RAPIDAPI_KEY=97189cc006mshcc41988e5682cc9p1049bejsn943f1811da0f
 
 #MONGO_URI=mongodb+srv://iamchristiancollins:6eM003FJsUpImcy0@cluster0.ldvmhmw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 #SECRET_KEY=your_secret_key
